--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#8C9EFF</color>
+    <color name="colorAccent">#3D5AFE</color>
     <color name="red">#B71C1C</color>
     <color name="green">#1B5E20</color>
 
