--- a/app/src/main/res/layout/upcoming_singles_match_item_row.xml
+++ b/app/src/main/res/layout/upcoming_singles_match_item_row.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Local"
+        android:text="@string/local"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/local_image"
         app:layout_constraintStart_toStartOf="@+id/local_image"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="@+id/local_image">
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/visitor_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -53,8 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/user_name"
-            app:layout_constraintTop_toBottomOf="@+id/user_name" />
+            app:layout_constraintStart_toStartOf="@+id/visitor_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/visitor_user_name" />
 
         <TextView
             android:id="@+id/my_user_name"
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Visitor"
+        android:text="@string/visitor"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/visitor_image"
         app:layout_constraintStart_toStartOf="@+id/visitor_image"
