--- a/app/src/main/res/layout/doubles_challenge_proposal_dialog.xml
+++ b/app/src/main/res/layout/doubles_challenge_proposal_dialog.xml
@@ -102,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Locals"
+            android:text="@string/locals"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/local_2_image"
             app:layout_constraintStart_toStartOf="@+id/local_2_image"
@@ -160,7 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Visitors"
+            android:text="@string/visitors"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/visitor_2_image"
             app:layout_constraintStart_toStartOf="@+id/visitor_2_image"
