--- a/app/src/main/res/layout/past_doubles_match_item_row.xml
+++ b/app/src/main/res/layout/past_doubles_match_item_row.xml
@@ -8,17 +8,15 @@
 
     <ImageView
         android:id="@+id/local_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:padding="8dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/local_companion_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:padding="8dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintBottom_toTopOf="@+id/match_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/local_image" />
@@ -28,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="@string/local"
+        android:text="@string/locals"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/local_companion_image"
         app:layout_constraintStart_toStartOf="@+id/local_companion_image"
@@ -38,9 +36,9 @@
         android:id="@+id/main_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/visitor_image"
         app:layout_constraintStart_toEndOf="@+id/local_image"
         app:layout_constraintTop_toTopOf="@+id/local_image">
@@ -68,8 +66,8 @@
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/local_companion_image"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Confirmed"
+            android:text="@string/confirmed"
             app:layout_constraintEnd_toEndOf="@+id/confirmed_icon"
             app:layout_constraintStart_toStartOf="@+id/confirmed_icon"
             app:layout_constraintTop_toBottomOf="@+id/confirmed_icon" />
@@ -147,8 +145,8 @@
         android:id="@+id/companions_main_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/local_companion_image"
@@ -187,17 +185,15 @@
 
     <ImageView
         android:id="@+id/visitor_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:padding="8dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/visitor_companion_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:padding="8dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         app:layout_constraintBottom_toTopOf="@+id/match_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/visitor_image" />
