--- a/app/src/main/res/layout/past_singles_match_item_row.xml
+++ b/app/src/main/res/layout/past_singles_match_item_row.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Local"
+        android:text="@string/local"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/local_image"
         app:layout_constraintStart_toStartOf="@+id/local_image"
@@ -106,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Confirmed"
+            android:text="@string/confirmed"
             app:layout_constraintEnd_toEndOf="@+id/confirmed_icon"
             app:layout_constraintStart_toStartOf="@+id/confirmed_icon"
             app:layout_constraintTop_toBottomOf="@+id/confirmed_icon" />
@@ -158,7 +158,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Visitor"
+        android:text="@string/visitor"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/visitor_image"
         app:layout_constraintStart_toStartOf="@+id/visitor_image"
