--- a/app/src/main/res/layout/singles_challenge_proposal_dialog.xml
+++ b/app/src/main/res/layout/singles_challenge_proposal_dialog.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="Local"
+            android:text="@string/local"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/local_image"
             app:layout_constraintStart_toStartOf="@+id/local_image"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="Visitor"
+            android:text="@string/visitor"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/visitor_image"
             app:layout_constraintStart_toStartOf="@+id/visitor_image"
