--- a/app/src/main/res/layout/challenge_edit_dialog.xml
+++ b/app/src/main/res/layout/challenge_edit_dialog.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="VS"
+        android:text="@string/vs_capital"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
             android:background="@color/edit_background_color"
             android:digits="1234567890"
             android:gravity="center"
-            android:hint="0"
+            android:hint="@string/score_0"
             android:inputType="number"
             android:maxLength="2"
             android:textSize="30sp"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Local"
+        android:text="@string/local"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/local_image"
         app:layout_constraintStart_toStartOf="@+id/local_image"
@@ -119,7 +119,7 @@
             android:background="@color/edit_background_color"
             android:digits="1234567890"
             android:gravity="center"
-            android:hint="0"
+            android:hint="@string/score_0"
             android:inputType="number"
             android:maxLength="2"
             android:textSize="30sp"
@@ -162,7 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Visitor"
+        android:text="@string/visitor"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/visitor_image"
         app:layout_constraintStart_toStartOf="@+id/visitor_image"
