--- a/app/src/main/res/layout/match_record_win_view.xml
+++ b/app/src/main/res/layout/match_record_win_view.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="W"
+        android:text="@string/win_initial"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
